--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -6,7 +6,7 @@
    <script type="text/javascript" src="/static/js/cart.js"></script>
 {% endblock head %}
 {% block body %}
-	<div class="total_count">全部商品<em>{{ total_count }}</em>件</div>
+	<div class="total_count"><em>全部商品</em></div>
 	<ul class="cart_list_th clearfix">
 		<li class="col01">商品名称</li>
 		<li class="col02">商品单位</li>
@@ -42,8 +42,8 @@
 
 	<ul class="settlements">
 		<li class="col01"><input type="checkbox" name="check_all" checked="" id="check_all"></li>
-		<li class="col02">全选</li>
-		<li class="col03">合计(不含运费)：<span>¥</span><em id="total">42.60</em><br>共计<b class="total_count1">2</b>件商品</li>
+		<li class="col02"></li>
+		<li class="col03">合计(不含运费)：<span>¥</span><em id="total">42.60</em><br>共计<b class="total_count1">2</b>种商品</li>
 		<li class="col04"><input id="jisuan" type="submit" value="去结算"></li>
 	</ul>
     </form>
