--- a/templates/user/user_center_info.html
+++ b/templates/user/user_center_info.html
@@ -45,8 +45,8 @@
 			<h3>用户中心</h3>
 			<ul>
 				<li><a href="user_center_info.html" class="active">· 个人信息</a></li>
-				<li><a href="user_center_order.html">· 全部订单</a></li>
-				<li><a href="user_center_site.html">· 收货地址</a></li>
+				<li><a href="/user/order_1/">· 全部订单</a></li>
+				<li><a href="{% url 'user:site' %}">· 收货地址</a></li>
 			</ul>
 		</div>
 		<div class="right_content clearfix">
@@ -65,12 +65,12 @@
                 {% for x in list %}
 
 				<li>
-					<a href="detail.html"><img src="/static/{{ x.gpic }}"></a>
-					<h4><a href="detail.html">{{ x.gtitle }}</a></h4>
+					<a href="/{{ x.id }}/"><img src="/static/{{ x.gpic }}"></a>
+					<h4><a href="/{{ x.id }}/">{{ x.gtitle }}</a></h4>
 					<div class="operate">
 						<span class="prize">￥{{ x.gprice }}</span>
 						<span class="unit">{{ x.gunit }}</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
+						<a href="javascript:;" class="add_goods" title="加入购物车"></a>
 					</div>
 				</li>
                 {% endfor %}
@@ -83,6 +83,16 @@
 		</div>
 	</div>
 {% endblock body %}
+<script>
+    $('.add_goods').click(function(){
+        $.get({url:'/my_cart/add{{ x.id }}_'+'1/',dataType:'json'}).done(function(data){
+                    alert('加入购物车成功');
+                   
+                }).fail(function(){
+                    alert('加入购物车失败');
+                })
+    }
+</script>
 
 
 
