--- a/templates/user/user_center_order.html
+++ b/templates/user/user_center_order.html
@@ -43,9 +43,9 @@
 		<div class="left_menu_con clearfix">
 			<h3>用户中心</h3>
 			<ul>
-				<li><a href="user_center_info.html">· 个人信息</a></li>
-				<li><a href="user_center_order.html" class="active">· 全部订单</a></li>
-				<li><a href="user_center_site.html">· 收货地址</a></li>
+				<li><a href="/user/info/">· 个人信息</a></li>
+				<li><a href="/user/order_1/" class="active">· 全部订单</a></li>
+				<li><a href="/user/site/">· 收货地址</a></li>
 			</ul>
 		</div>
 		<div class="right_content clearfix">
@@ -79,17 +79,17 @@
                 {% endfor %}
                 <div class="pagenation">
                 {% if page.has_previous %}
-				<a href="/order_{{ page.previous_page_number }}/">上一页</a>
+				<a href="/user/order_{{ page.previous_page_number }}/">上一页</a>
                 {% endif %}
                 {% for pindex in paginator.page_range %}
                 {% if pindex == page.number %}
 				<a href="#" class="active">{{ pindex }}</a>
                 {% else %}
-                <a href="/order_{{ pindex}}/">{{ pindex }}</a>
+                <a href="/user/order_{{ pindex}}/">{{ pindex }}</a>
                 {% endif %}
                 {% endfor %}
                 {% if page.has_next %}
-                <a href="/order_{{ page.next_page_number }}/">下一页</a>
+                <a href="/user/order_{{ page.next_page_number }}/">下一页</a>
 			    {% endif %}
 			    </div>
 				
